# ImageSequenceConverter

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  build_and_run_windows.bat  run_app.sh
src/: converter.cpp  converter.h  droplineedit.cpp  droplineedit.h  editablecommanddialog.cpp  editablecommanddialog.h  main.cpp  mainwindow.cpp  mainwindow.h  presetmanager.cpp  presetmanager.h
